chore: Use `isBlank` instead of `trim().isEmpty()`